<resources>
    <string name="app_name">SmartHabits</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="header_balance">Balances</string>
    <string name="newjob_chq">BMO Chequing</string>
    <string name="main_title">Spending</string>
    <string name="table_header_transactions">Transactions</string>
    <string name="col_date">Date</string>
    <string name="col_desc">Description</string>
    <string name="col_amt">Amount</string>
    <string name="user_name">John Smith</string>
    <string name="user_email">john.smith@cgi.com</string>

    <string name="open_account_header">Open New Account</string>
    <string name="open_account_client_name_header">Name</string>
    <string name="open_account_plan_type_header">Account Type</string>
    <string name="open_account_create_button">Submit</string>

    <string-array name="plan_types">
        <item>RESP</item>
        <item>RRIF</item>
        <item>RRSP</item>
        <item>TFSA</item>
    </string-array>

    <string name="notification_title_knot">Tie the Knot</string>
    <string name="notification_desc_knot">Congratulations. It\'s time to plan ahead. Whether you\'re financing a maternity leave or splitting income during retirement, a spousal RRSP account is something to consider. For additional information, click here.</string>

    <string name="notification_title_new_gig">You got a job!</string>
    <string name="notification_desc_new_gig">In order to make the most of your inflow, consider opening a Tax Free Savings Account!</string>

    <string name="notification_title_pension">Goodbye Tension, Hello Pension</string>
    <string name="notification_desc_pension">Time to convert your RRSP account to RRIF.</string>
    
    <string name="notification_title_life_bun">Bun in the Oven</string>
    <string name="notification_desc_life_bun">New kid on the block! Time to open a RESP account.</string>

    <string name="notification_title_break_bank">No Need to Break the Bank!</string>
    <string name="notification_desc_break_bank">Make regular investment contributions to balance out market fluctuations.</string>

    <string name="notification_title_new_prez">New president in the house!</string>
    <string name="notification_desc_new_prez">Global financial landscape is changing with the inauguration of Donald Trump as the new president
        of the United States. Click here to learn more about what that means to you.</string>

    <string name="notification_title_brexit">British people vote YES!</string>
    <string name="notification_desc_brexit">Learn about the global financial repercussions with Britain slated to leave the European Union.</string>

    <string name="notification_title_jackpot">OMG, you won the jackpot!</string>
    <string name="notification_desc_jackpot">Time to consider what to do with your sudden influx of wealth.</string>
    <string name="notification_title_inheritance">When it Rains, it Pours</string>
    <string name="notification_desc_inheritance">It\'s a good thing that you have been saving for a rainy day. You may want to withdraw from your TFSA instead of RRSP to avoid tax implications. For additional information, click here.</string>
    <string name="notification_title_fumes">Running on Empty (RRSP Withdrawals)</string>
    <string name="notifications_desc_fumes">Life throws many curveballs. You can hit the curve balls out of the park by making informed decisions. When you need money and plan to withdraw from your RRSP, your institution will hold back a percentage of your money based on the amount you withdraw. For additional information, click here.</string>
</resources>
