<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hackabots.flyknits.OpenAccountActivity">

    <TextView
        android:id="@+id/main_page_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_account_header"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="44dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="326dp"
        android:layout_height="40dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="15dp"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:text="@string/user_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_editor_absoluteY="119dp" />

    <Spinner
        android:id="@+id/plan_type"
        android:layout_width="326dp"
        android:layout_height="42dp"
        android:entries="@array/plan_types"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.42" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="109dp"
        android:layout_height="28dp"
        android:text="@string/open_account_plan_type_header"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="109dp"
        android:layout_height="28dp"
        android:text="@string/open_account_client_name_header"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/main_page_text"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:onClick="submitNewAccountOnClick"
        android:text="@string/open_account_create_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plan_type" />

</android.support.constraint.ConstraintLayout>
